--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -4,6 +4,10 @@
   text-align: center;
   text-decoration: underline;
 }
+
+#submit-button {
+  margin-top: 5px;
+}
   
   @media only screen and (max-width: 375px) {
   #message {
